# serde_json_1400

./: Cargo.toml  README.md
examples/serde1400/: Cargo.toml
examples/serde1400/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: from_slice.rs
src/: de.rs  error.rs  lib.rs  macros.rs  map.rs  number.rs  raw.rs  read.rs  ser.rs
src/features_check/: error.rs
src/lexical/: mod.rs
src/value/: from.rs  index.rs  mod.rs  ser.rs
tests/: debug.rs  map.rs  stream.rs  test.rs
tests/crate/: Cargo.toml  test.rs
tests/regression/: issue520.rs  issue795.rs  issue845.rs
tests/ui/: missing_colon.rs  missing_comma.rs  missing_value.rs  not_found.rs  parse_expr.rs  parse_key.rs  unexpected_after_array_element.rs  unexpected_after_map_entry.rs  unexpected_colon.rs  unexpected_comma.rs
