[package]
name = "serde_json_1400-fuzz"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json_1400 = { path = ".." }

[[bin]]
name = "from_slice"
path = "fuzz_targets/from_slice.rs"
test = false
doc = false

[workspace]
