[package]
name = "serde_json_test"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "test.rs"

[dependencies]
serde_json_1400 = { path = "../..", default-features = false }

[features]
default = ["std"]
std = ["serde_json_1400/std"]
alloc = ["serde_json_1400/alloc"]
preserve_order = ["serde_json_1400/preserve_order"]
arbitrary_precision = ["serde_json_1400/arbitrary_precision"]
raw_value = ["serde_json_1400/raw_value"]
unbounded_depth = ["serde_json_1400/unbounded_depth"]
